Build changes to allow automatic build of jlink JRE
- fixed output of getModuleList task to make it more easily compatible with jlink
- added buildJre task, which automatically creates a JRE suitable for project